2008-11-27  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.h
	* src/hildon-button.c (hildon_button_set_property)
	(hildon_button_get_property, hildon_button_class_init)
	(hildon_button_set_style, hildon_button_get_style):
	New "style" property to change the visual appearance of the
	button.

	* src/hildon-picker-button.c (hildon_picker_button_new):
	Set the new "style" property to HILDON_BUTTON_STYLE_PICKER.

	Fixes: NB#93281 (new API: hildon_button_set_picker_style() to set
	HildonButton look like PickerButton)

2008-11-27  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c: (_default_print_func): Get the correct
	column while building the default string.

2008-11-25  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c: (_create_new_column): Do not disable the
	scroll indicator by default.

	Fixes: NB#92230 (Scroll indication not visible in HildonTouchSelector)

2008-11-25  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-main.c: Fix the documentation for hildon_init()

2008-11-25  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-docs.sgml
	* doc/hildon.types
	* src/Makefile.am
	* src/hildon.h
	* src/hildon-window-stack-private.h
	* src/hildon-window-stack.h
	* src/hildon-window-stack.c:
	New HildonWindowStack object, that adds support for multiple
	stacks of windows per process.

	* src/hildon-stackable-window-private.h
	* src/hildon-stackable-window.h
	* src/hildon-stackable-window.c (hildon_stackable_window_set_stack)
	(hildon_stackable_window_get_stack, hildon_stackable_window_map)
	(hildon_stackable_window_show, hildon_stackable_window_hide)
	(hildon_stackable_window_class_init)
	(hildon_stackable_window_init):
	Use HildonWindowStack for stack management.

	* src/hildon-program.c (hildon_program_pop_window_stack)
	(hildon_program_peek_window_stack)
	(hildon_program_go_to_root_window):
	Add a fallback implementation to the deprecated functions using
	HildonWindowStack.
